--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -29,6 +29,11 @@ button
     background: var(--background-color)
     color: var(--text-color)
     border: var(--text-color) 1px solid
+    padding: 10px 20px
+    margin: 10px
+    &:hover
+        background: var(--text-color)
+        color: var(--background-color)
 
 \:root
     --background-color: #dddddd
