--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -27,6 +27,12 @@ body {
   text-align: right;
 }
 
+.select-theme-bar select {
+  background: var(--block-background-color);
+  color: var(--text-color);
+  border: 1px solid var(--background-color);
+}
+
 select {
   padding: 10px;
 }
