--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -21,6 +21,10 @@ body
 
 .select-theme-bar
     text-align: right
+    & select
+        background: var(--block-background-color)
+        color: var(--text-color)
+        border: 1px solid var(--background-color)
 
 select
     padding: 10px
