--- a/assets/sass/style.sass
+++ b/assets/sass/style.sass
@@ -25,6 +25,12 @@ body
         background: var(--block-background-color)
         color: var(--text-color)
         border: 1px solid var(--background-color)
+        position: absolute
+        top: 5px
+        right: 5px
+        display: inline-block
+        padding: 10px 25px
+        cursor: pointer
 
 select
     padding: 10px
